[tool.poetry]
name = "bareASGI-auth-common"
version = "2.0.0"
description = ""
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "bareasgi_auth_common" },
]

[tool.poetry.dependencies]
python = "^3.8"
bareclient = "^5.0"
PyJWT = "^2.3"
bareasgi = "^4.0.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5"
mypy = "^0.910"
pytest = "^6.2"
pylint = "^2.11"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
